--- a/real-state/src/app/houses/edit-house/edit-house.component.html
+++ b/real-state/src/app/houses/edit-house/edit-house.component.html
@@ -10,12 +10,25 @@
               <p>Registration Number <span>*</span></p>
               <span class="icon-case"><i class="fa fa-male"></i></span>
               <input
-                type="number"
+                type="text"
                 name="registrationNumber"
                 id="registrationNumber"
+                required
+                minlength="5"
+                maxlength="5"
+                pattern="^[1-9][0-9]*$"
+                #ID="ngModel"
                 [(ngModel)]="house.registrationNumber"
               />
-              <div class="validation"></div>
+              <div class="alert" *ngIf="ID.invalid && (ID.dirty || ID.touched)">
+                <div *ngIf="ID.errors?.required">
+                  Registration number is required!
+                </div>
+                <div *ngIf="ID.errors?.minlength">
+                  Registration number must be 5
+                </div>
+                <div *ngIf="ID.errors?.pattern">pattern does not match</div>
+              </div>
             </div>
 
             <div class="form-group">
@@ -25,6 +38,7 @@
                 class="combo"
                 name="style"
                 id="style"
+                required
                 [(ngModel)]="house.style"
               >
                 <option
@@ -47,6 +61,7 @@
                 class="combo"
                 name="type"
                 id="type"
+                required
                 [(ngModel)]="house.type"
               >
                 <option value="residential">Residential</option>
@@ -63,6 +78,7 @@
                 class="combo"
                 name="status"
                 id="status"
+                required
                 [(ngModel)]="house.status"
               >
                 <option value="sale">Sale</option>
@@ -77,12 +93,23 @@
               <p>Year Built <span>*</span></p>
               <span class="icon-case"><i class="fa fa-building-o"></i></span>
               <input
-                type="number"
+                type="text"
                 name="yearBuilt"
                 id="yearBuilt"
+                required
+                pattern="^([1][9][9][8,9])|([2][0]([0,1][0-9]|[2][0-2]))$"
+                #year="ngModel"
                 [(ngModel)]="house.yearBuilt"
               />
-              <div class="validation"></div>
+              <div
+                class="alert"
+                *ngIf="year.invalid && (year.dirty || year.touched)"
+              >
+                <div *ngIf="year.errors?.required">
+                  bulited year is required!
+                </div>
+                <div *ngIf="year.errors?.pattern">between (1998-2022)</div>
+              </div>
             </div>
             <div class="form-group">
               <p>size <span>*</span></p>
@@ -91,6 +118,9 @@
                 type="number"
                 name="size"
                 id="size"
+                required
+                pattern="^(([1-5][0-9][0-9])|([5-9][0-9]))$"
+                #size="ngModel"
                 [(ngModel)]="house.size"
               />
               <div class="validation"></div>
@@ -102,9 +132,16 @@
               <textarea
                 name="address"
                 rows="14"
+                required
+                #address="ngModel"
                 [(ngModel)]="house.address"
               ></textarea>
-              <div class="validation"></div>
+              <div
+                class="alert"
+                *ngIf="address.invalid && (address.dirty || address.touched)"
+              >
+                Address is required!
+              </div>
             </div>
 
             <div class="form-group">
@@ -114,6 +151,7 @@
                 class="combo"
                 name="editor"
                 id="editor"
+                required
                 [(ngModel)]="house.editor"
               >
                 <option
@@ -127,7 +165,9 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="bouton-contact">Submit</button>
+        <button [disabled]="f.invalid" type="submit" class="bouton-contact">
+          Submit
+        </button>
       </form>
     </div>
   </body>
